# physim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
commons/: Axes.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp
commons/shaders/: axes.frag
docs/: timestep.webm
docs/proj1/: mesh.webm  physics.webm  start_pause_step.webm
docs/proj3/: collision.webm  friction.webm  sizes.webm  tumbling.webm
proj1/: Axes.cpp  Axes.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Grid.cpp  Grid.hpp  GridRenderer.cpp  GridRenderer.hpp  Particle.cpp  Particle.hpp  main.cpp
proj1/shaders/: axes.vert  grid.vert  grid_plain.frag  grid_pong.frag  grid_tetra.geom  grid_vec.geom
proj2/: CMakeLists.txt  Integrator.cpp  Integrator.hpp  NeighborSearch.cpp  NeighborSearch.hpp  ParticleSystem.hpp  SPHRenderer.cpp  SPHRenderer.hpp  SPHSimulator.cpp  SPHSimulator.hpp  main.cpp
proj2/shaders/: sph.frag  sph.vert
proj3/: CMakeLists.txt  Collision.cpp  Collision.hpp  RigidBody.cpp  RigidBody.hpp  RigidBodyRenderer.cpp  RigidBodyRenderer.hpp  main.cpp
proj3/shaders/: phong.frag  phong.vert
